# rs41_rust

./: .gitignore  CMakeLists.txt  Cargo.toml  Embed.toml  LICENSE  Pinning.md  README.md  flash.sh  flash_TI.sh  flash_glasgow.sh  frequency_calc.py  hello-world.hex  memory.x  stm32100b_eval.cfg
gnuradio/: demod.grc
hw/RS41_jtag_adapter/: RS41_adapter.kicad_pcb  RS41_adapter.kicad_pro  RS41_adapter.kicad_sch
src/: hell.rs  main.rs  rs41_led.rs
