[package]
name = "rs41_test"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = { version = "1.1.3", default-features = false }
embedded-hal = "0.2.7"
panic-halt = "^0.2.0"
ublox = { version = "0.4.2", default-features = false }
heapless = "0.7.16"
systick-monotonic = "1.0.1"
si4032_driver = {version = "0.1.0", path = "../si4032_driver-rs"}
nb = "1.1.0"

[features]
hell = []
rtty = []

[dependencies.stm32f1xx-hal]
features = ["stm32f100", "rt", "medium"]
version = "0.10.0"

[profile.dev]
opt-level = "s"
[profile.release]


[dependencies.lexical-core]
version = "0.8.5"
default-features = false
# Can select only desired parsing/writing features.
features = ["parse-floats", "write-floats", "write-integers"]