[package]
name = "rs41_test"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.5.0", features = ["cortex-m-systick"]}
rtt-target = "0.5.0"
embedded-hal = "0.2.7"
panic-halt = "^0.2.0"
ublox = { version = "=0.5.0", default-features = false, features = ["ubx_proto23"] }
heapless = "0.7.16"
systick-monotonic = "1.0.1"
si4032_driver = {version = "0.1.0", path = "../si4032_driver-rs"}
nb = "1.1.0"

[features]
hell = []

[dependencies.stm32f1xx-hal]
features = ["stm32f100", "rt", "medium"]
version = "0.10.0"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"


[dependencies.lexical-core]
version = "0.8.5"
default-features = false
# Can select only desired parsing/writing features.
features = ["parse-floats", "write-floats", "write-integers"]
